--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -32,7 +32,9 @@
             android:textSize="20sp"
             android:id="@+id/text_content"
             android:layout_width="match_parent"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:ellipsize="end"
+            android:lines="2" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
